k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    #ingress controller basato sul progetto nginx
    kubernetes.io/ingress.class: nginx
    #tutte le richieste vengono riscritte come / (la parte /api viene riscritta come /)
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        #2 path possibili / e /api
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
